--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <strong>Email:</strong> riskijuliarta4@gmail.com
         </p>
         <div class="socials">
-            <a href="#" target="https://www.instagram.com/taa.c_o?igsh=MTBnd2FlY3FqaG5lNA==">Instagram</a>
+            <a href="https://www.instagram.com/taa.c_o?igsh=MTBnd2FlY3FqaG5lNA==" target="_blank">Instagram</a>
             <a href="#" target="_blank">Github</a>
         </div>
         <div class="prestasi">
